--- a/spring/first/pom.xml
+++ b/spring/first/pom.xml
@@ -111,7 +111,7 @@
                 </dependencies>
             </plugin>
 
-            <!-- This plugin is required to build angular project using maven. -->
+            <!-- This plugin is required to build angular project using maven.
             <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
@@ -145,6 +145,7 @@
                     </execution>
                 </executions>
             </plugin>
+            -->
         </plugins>
     </build>
 </project>
